--- a/projects/grange/src/lib/views/user/validation.html
+++ b/projects/grange/src/lib/views/user/validation.html
@@ -1,6 +1,6 @@
 <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
   <p class="error" *ngIf="error">{{ error }}</p>
-  <sf-form [schema]="schema" [(model)]="editModel"></sf-form>
+  <sf-form [schema]="schema" (onChange)="updateModel($event)"></sf-form>
 
   <footer>
     <pa-button border type="submit">login.button.submit</pa-button>
