Auth base template

--- a/projects/grange/src/lib/components/base-auth.html
+++ b/projects/grange/src/lib/components/base-auth.html
@@ -1,5 +1,4 @@
-<div class="auth_header">
-  <h1>{{title}}</h1>
-  <img class="logo" src="{{logo}}" />
+<div traverseTo="/" class="auth_header">
+  <img class="logo" src="{{logo}}"/>
 </div>
 <ng-content #form></ng-content>
