--- a/projects/grange/src/lib/views/user/login.scss
+++ b/projects/grange/src/lib/views/user/login.scss
@@ -1,18 +1,10 @@
 @import "../../style";
 
 :host {
-    display: block;
-    margin: rythm(2) auto;
-    width: 400px;
-
-    .error {
-        color: $red;
+    h1, footer {
+      text-align: center;
+      width: 100%;
     }
-
-    footer {
-        text-align: center;
-    }
-
     .auth_button {
       margin-top: 1vh;
       margin-bottom: 1vh;
