--- a/projects/grange/src/lib/views/user/validation.html
+++ b/projects/grange/src/lib/views/user/validation.html
@@ -1,9 +1,11 @@
-<form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
-  <p class="error" *ngIf="error">{{ error }}</p>
-  <sf-form [schema]="schema" (onChange)="updateModel($event)"></sf-form>
+<grange-auth>
+  <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
+    <p class="error" *ngIf="error">{{ error }}</p>
+    <sf-form [schema]="schema" (onChange)="updateModel($event)"></sf-form>
 
-  <footer>
-    <pa-button border type="submit">login.button.submit</pa-button>
-  </footer>
+    <footer>
+      <pa-button border type="submit">login.button.submit</pa-button>
+    </footer>
 
-</form>
+  </form>
+</grange-auth>
