--- a/projects/grange/src/lib/components/base-auth.scss
+++ b/projects/grange/src/lib/components/base-auth.scss
@@ -7,6 +7,7 @@
 
     .auth_header {
       text-align: center;
+      cursor: pointer;
       img {
         max-width: 200px;
         margin: 20px auto;
