--- a/projects/grange/src/lib/views/user/forgot.html
+++ b/projects/grange/src/lib/views/user/forgot.html
@@ -5,7 +5,7 @@
     <pa-input name="login" ngModel>login.username</pa-input>
 
     <footer>
-      <pa-button border type="submit">login.button.recover</pa-button>
+      <pa-button border type="submit">login.button.forgot</pa-button>
     </footer>
 
   </form>
