--- a/projects/grange/src/lib/views/user/login.html
+++ b/projects/grange/src/lib/views/user/login.html
@@ -15,7 +15,7 @@
       </ng-container>
 
       <footer>
-        <pa-button border type="submit">login.button.login</pa-button>
+        <pa-button border (click)="onSubmit(form.value)">login.button.login</pa-button>
       </footer>
 
   </form>
