--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../src/develop/pastanaga-angular/projects/pastanaga/src/lib/styles/variables";
+@import "../../../../node_modules/@guillotinaweb/pastanaga-angular/lib/styles/variables";
 
 :host {
     display: block;
