--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,3 +1,3 @@
-@import "../../../src/develop/pastanaga-angular/projects/pastanaga/src/lib/styles/common-reset";
-$font-path: "../../../src/develop/pastanaga-angular/projects/pastanaga/src/assets/fonts";
-@import "../../../src/develop/pastanaga-angular/projects/pastanaga/src/lib/styles/fonts";
+@import "../../../node_modules/@guillotinaweb/pastanaga-angular/lib/styles/common-reset";
+$font-path: "../../../node_modules/@guillotinaweb/pastanaga-angular/lib/assets/fonts";
+@import "../../../node_modules/@guillotinaweb/pastanaga-angular/lib/styles/fonts";
