--- a/projects/grange/src/lib/views/folder.html
+++ b/projects/grange/src/lib/views/folder.html
@@ -4,6 +4,6 @@
 <div *ngIf="!(children | async) || (children | async)?.length === 0" translate>folder.empty</div>
 <ul *ngIf="!!(children | async) && (children | async)?.length > 0">
     <li *ngFor="let child of (children | async)">
-        <pa-button-link [traverseTo]="child['@id']">{{ child.title }}</pa-button-link>
+        <a href="#" [traverseTo]="child['@id']">{{ child.title }}</a>
     </li>
 </ul>
