--- a/projects/grange/src/lib/components/breadcrumbs.scss
+++ b/projects/grange/src/lib/components/breadcrumbs.scss
@@ -61,8 +61,12 @@
         right: - rythm(2);
         top: 1px;
     }
-    & ::ng-deep .pa-button-link {
+    & .pa-button {
         white-space: nowrap;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
     }
     & .o-breadcrumb-item-more ::ng-deep svg {
         fill: $separator-color;
