better demo and tutorial

--- a/projects/demo/src/app/player/player.component.html
+++ b/projects/demo/src/app/player/player.component.html
@@ -1,4 +1,5 @@
 <pa-input [(value)]="title">Title</pa-input>
-<pa-input [(value)]="team">Team</pa-input>
 <pa-input [(value)]="rank" type="number">Rank</pa-input>
 <pa-button (click)="save()">Save</pa-button>
+<pa-button (click)="openDialog()" color="secondary">Move to other team</pa-button>
+<pa-button (click)="delete()" color="destructive">Delete</pa-button>
