--- a/projects/grange/src/lib/views/user/login.html
+++ b/projects/grange/src/lib/views/user/login.html
@@ -20,15 +20,17 @@
 
   </form>
 
-  <div class="auth_button">
-    <pa-button border (click)="onForgot()" *ngIf="allowForgot">login.button.forgot</pa-button>
-  </div>
-
-  <div class="auth_button">
-    <pa-button border (click)="onRegister()" *ngIf="allowRegister">login.button.register</pa-button>
-  </div>
-
-  <div class="auth_button" *ngIf="allowSocial">
-    <pa-button border *ngFor="let provider of providers" class="{{provider}}-social" (click)="socialLogin(provider)" type="submit">{{provider}}</pa-button>
-  </div>
+  <ng-container *ngIf="hasSocialLogin">
+      <div class="auth_button">
+        <pa-button border (click)="onForgot()" *ngIf="allowForgot">login.button.forgot</pa-button>
+      </div>
+    
+      <div class="auth_button">
+        <pa-button border (click)="onRegister()" *ngIf="allowRegister">login.button.register</pa-button>
+      </div>
+    
+      <div class="auth_button" *ngIf="allowSocial">
+        <pa-button border *ngFor="let provider of providers" class="{{provider}}-social" (click)="socialLogin(provider)" type="submit">{{provider}}</pa-button>
+      </div>
+  </ng-container>
 </grange-auth>
